full rewrite with persistent todos

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,6 @@
       <a href="#" id="pending-todos">Pending</a>
       <a href="#" id="done-todos">Done</a>
     </div>
-    <script src="script.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
