--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Example App</title>
     <link media="all" rel="stylesheet" href="style.css" />
+    <link media="all" rel="stylesheet" href="dragula.css" />
   </head>
   <body>
     <form>
