started with tests

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Example App</title>
+    <title>Todo App</title>
     <link media="all" rel="stylesheet" href="style.css" />
     <link media="all" rel="stylesheet" href="dragula.css" />
   </head>
