--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -2,19 +2,25 @@
   <head>
     <title>Todo App</title>
     <link media="all" rel="stylesheet" href="style.css" />
-    <link media="all" rel="stylesheet" href="dragula.css" />
   </head>
   <body>
-    <form>
-      <input class="todo-name" type="text"/>
-      <button class="new-todo">+</button>
-    </form>
-    <ul class="todo-list active">
-    </ul>
-    <div class="todo-panels">
-      <a href="#" id="all-todos" class="active">All</a>
-      <a href="#" id="pending-todos">Pending</a>
-      <a href="#" id="done-todos">Done</a>
+    <div class="control-bar">
+      <a href="#" title="Change list">
+        <svg class="feather feather-square sc-dnqmqq jxshSx" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect></svg>
+      </a>
+    </div>
+    <div class="todo-container">
+      <form>
+        <input class="todo-name" type="text"/>
+        <button class="new-todo">+</button>
+      </form>
+      <ul class="todo-list active">
+      </ul>
+      <div class="todo-panels">
+        <a href="#" id="all-todos" class="active">All</a>
+        <a href="#" id="pending-todos">Pending</a>
+        <a href="#" id="done-todos">Done</a>
+      </div>
     </div>
     <script src="index.js"></script>
   </body>
