allow to shrink list

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -5,11 +5,12 @@
   </head>
   <body>
     <div class="control-bar">
-      <a href="#" title="Change list">
+      <a href="#" class="switch-list" title="Change list">
         <svg class="feather feather-square sc-dnqmqq jxshSx" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect></svg>
       </a>
     </div>
     <div class="todo-container">
+      <h1 class="todo-list-title" data-title="default">Default</h1>
       <form>
         <input class="todo-name" type="text"/>
         <button class="new-todo">+</button>
