--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <div class="control-bar">
+      <span class="current-list">Default</span>
       <a href="#" class="switch-list" title="Change list">
         <svg class="feather feather-square sc-dnqmqq jxshSx" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect></svg>
       </a>
