--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -6,11 +6,14 @@
   <body>
     <div class="control-bar">
       <span class="current-list">Default</span>
+      <a href="#" class="add-list" title="Add new list">
+        <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
+      </a>
       <a href="#" class="switch-list" title="Change list">
         <svg class="feather feather-square sc-dnqmqq jxshSx" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect></svg>
       </a>
     </div>
-    <div class="todo-container">
+    <div class="todo-container active" id="default">
       <h1 class="todo-list-title" data-title="default">Default</h1>
       <form>
         <input class="todo-name" type="text"/>
