lists preview now are selectables

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -14,6 +14,7 @@
       </a>
     </div>
     <div class="todo-container active" id="default">
+      <a class="todo-selector"></a>
       <h1 class="todo-list-title" data-title="default">Default</h1>
       <form>
         <input class="todo-name" type="text"/>
